codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktree_manager.snap
---
source: tui/src/chatwidget/tests/worktree_display.rs
expression: "render_bottom_popup(&chat, 120)"
---
  Worktrees
  Codewith-managed worktrees for /tmp/project

  Search worktrees
  Managed worktree policy          enabled true | main manual | sub auto | cleanup delete-if-clean | root /tmp/
                                   project/.codewith/worktrees | repo /tmp/project
› Create worktree                  Create a managed isolated worktree
  Reconcile worktrees              Discover linked Codewith worktrees and update state
  Active (1)                       leased and available to inspect
  018f-act  active                 isolated - main session thread-m - clean - updated 2026-06-18 12:46:40 - branch
                                   codewith/018f-active-worktree - /tmp/project/.codewith/worktrees/018f-active-
                                   worktree
  Cleanup pending (1)              released but retained because cleanup needs review
  018f-cle  cleanup-pending        isolated - agent agent-cl waitingOnUser - dirty - updated 2026-06-18 12:46:40 -
                                   branch codewith/018f-cleanup-pending - /tmp/project/.codewith/worktrees/018f-
                                   cleanup-pending
  Deleted (1)                      deleted or tombstoned

  Press enter to confirm or esc to go back
